--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       justify-content: center;
       text-align: center;
       }
-      
+
       .hog-card{
         float:left;
         width:393px;
@@ -41,6 +41,9 @@
       }
       .center-text {
         text-align: center;
+      }
+      img {
+        max-width: 250px;
       }
     </style>
   </head>
